cargo.toml fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.0.1"
 authors = ["Alex Mullen <alex@xela.foo>"]
 categories = ["algorithms", "command-line-utilities", "encoding"]
 edition = "2021"
-keywords = ["base64", "b64", "encode", "decode", "cli", "library"]
+homepage = "https://github.com/xelamonster/ubase64"
+keywords = ["base64", "encode", "decode", "cli", "library"]
 license = "Unlicense"
 readme = "README.md"
 repository = "https://github.com/xelamonster/ubase64"
